feat: configurando o swagger e o banco de dados

--- a/todolist/todolist/src/main/resources/application.properties
+++ b/todolist/todolist/src/main/resources/application.properties
@@ -1,1 +1,16 @@
+server.port=8080
 spring.application.name=Todolist API
+
+springdoc.swagger-ui.path=/
+
+## BD
+spring.datasource.url=xxx
+spring.datasource.username=xxx
+spring.datasource.password=xxx
+
+spring.datasource.driverClassName=org.postgresql.Driver
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.default_schema=cecilia_schema
+spring.datasource.hikari.connection-init-sql=set schema 'cecilia_schema'
+spring.datasource.hikari.maximumPoolSize=1
+
